# hwloc-fortran

./: CMakeLists.txt  CMakePresets.json  README.md  get_cpu_cli.f90  get_cpu_hwloc.c
.github/workflows/: ci.yml
archive/: hwloc2.cmake
cmake/: Config.cmake.in  config.cmake.in  hwloc.cmake  install.cmake  install_hwloc.cmake  libraries.json
scripts/: CMakeLists.txt
